# try-fast

./: .gitignore  API.md  LICENSE  README.md  Taskfile.yml  main.py  pyproject.toml
microblog-platform/apps/auth-service/: pyproject.toml
microblog-platform/apps/blog-service/: main.py  pyproject.toml
microblog-platform/apps/user-service/: README.md  pyproject.toml
microblog-platform/apps/user-service/tests/: test_db.py
microblog-platform/apps/user-service/user_service/: main.py
microblog-platform/apps/user-service/user_service/api/v1/: router.py
microblog-platform/apps/user-service/user_service/api/v1/users/: __init__.py  address.py  admin.py  auth.py  create.py  profile.py  update.py
microblog-platform/apps/user-service/user_service/core/: config.py  file_storage.py  security.py
microblog-platform/apps/user-service/user_service/db/: init_db.py  session.py
microblog-platform/apps/user-service/user_service/dependencies/: auth.py  permissions.py  services.py
microblog-platform/apps/user-service/user_service/docs/auth/: login.py
microblog-platform/apps/user-service/user_service/docs/user/: create.py  delete.py  me.py  retrieve.py  update.py
microblog-platform/apps/user-service/user_service/models/: address.py  social.py  user.py
microblog-platform/apps/user-service/user_service/repositories/: address.py  user.py
microblog-platform/apps/user-service/user_service/routers/: user.py
microblog-platform/apps/user-service/user_service/schemas/: address.py  social.py  token.py  user.py
microblog-platform/apps/user-service/user_service/services/: address.py  role.py  user.py
